--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,15 @@ CATKIN_IGNORE
 
 .DS_Store
 
+# vscode ignore
+
+.vscode/*
+.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+.DS_Store
+
+# Local History for Visual Studio Code
+.history/
