--- a/Workspace/src/neo_simulations/neo_gazebo/package.xml
+++ b/Workspace/src/neo_simulations/neo_gazebo/package.xml
@@ -55,7 +55,8 @@
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
-    <!-- Other tools can request additional information be placed here -->
-
+    <gazebo_ros plugin_path="${prefix}/lib" />
+    <gazebo_ros gazebo_media_path="${prefix}" />
+    <gazebo_ros gazebo_model_path="${prefix}/models" /> 
   </export>
 </package>
