--- a/JetsonWorkspace/src/people_detection/package.xml
+++ b/JetsonWorkspace/src/people_detection/package.xml
@@ -66,7 +66,7 @@
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>tf2</exec_depend>
-  <exec_depend>librealsense2</exec_depend>
+  <exec_depend>pyrealsense2</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
