Get the basic plugins for the costmaps to work.
For now we only have the static, obstacle and inflation layers to
work. On with the social cost ones.

--- a/Workspace/src/neobotix_mp_655/neo_2dnav/config/costmap_global.yaml
+++ b/Workspace/src/neobotix_mp_655/neo_2dnav/config/costmap_global.yaml
@@ -24,5 +24,10 @@ global_costmap:
                             # may find a longer and more open route.
 
   plugins:
-    - {name: social_layer,           type: "social_navigation_layers::ProxemicLayer", output: "screen"}
-    - {name: social_pass_layer,      type: "social_navigation_layers::PassingLayer", output: "screen"}
+     - {name: static_map,       type: "costmap_2d::StaticLayer"}
+     - {name: obstacles,        type: "costmap_2d::VoxelLayer"}
+     - {name: inflation_layer,  type: "costmap_2d::InflationLayer"}
+
+  #  - {name: static_map,             type: "costmap_2d::StaticLayer"}
+  #  - {name: social_layer,           type: "social_navigation_layers::ProxemicLayer"}
+   # - {name: social_pass_layer,      type: "social_navigation_layers::PassingLayer"}
