--- a/Workspace/src/neobotix_mp_655/neo_2dnav/config/costmap_local_sim.yaml
+++ b/Workspace/src/neobotix_mp_655/neo_2dnav/config/costmap_local_sim.yaml
@@ -11,7 +11,10 @@ local_costmap:
   transform_tolerance: 1.5
   #inflation_layer/inflation_radius: 0.3
   #inflation_layer/cost_scaling_factor: 2.5
-
   plugins:
-    - {name: social_layer,           type: "social_navigation_layers::ProxemicLayer", output: "screen"}
-    - {name: social_pass_layer,      type: "social_navigation_layers::PassingLayer", output: "screen"}
+     - {name: static_map,       type: "costmap_2d::StaticLayer"}
+     - {name: obstacles,        type: "costmap_2d::VoxelLayer"}
+     - {name: inflation_layer,  type: "costmap_2d::InflationLayer"}
+    #- {name: static_map,             type: "costmap_2d::StaticLayer"}
+    #- {name: social_layer,           type: "social_navigation_layers::ProxemicLayer"}
+    #- {name: social_pass_layer,      type: "social_navigation_layers::PassingLayer"}
