--- a/JetsonWorkspace/src/people_detection/CMakeLists.txt
+++ b/JetsonWorkspace/src/people_detection/CMakeLists.txt
@@ -12,6 +12,9 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
   std_msgs
+  sensor_msgs
+  opencv2
+  cv_bridge
   tf2
   message_generation
 )
