--- a/Workspace/src/neobotix_mp_655/neo_2dnav/config/costmap_global.yaml
+++ b/Workspace/src/neobotix_mp_655/neo_2dnav/config/costmap_global.yaml
@@ -27,7 +27,4 @@ global_costmap:
      - {name: static_map,       type: "costmap_2d::StaticLayer"}
      - {name: obstacles,        type: "costmap_2d::VoxelLayer"}
      - {name: inflation_layer,  type: "costmap_2d::InflationLayer"}
-
-  #  - {name: static_map,             type: "costmap_2d::StaticLayer"}
-  #  - {name: social_layer,           type: "social_navigation_layers::ProxemicLayer"}
-   # - {name: social_pass_layer,      type: "social_navigation_layers::PassingLayer"}
+     - {name: social_layer,     type: "social_navigation_layers::ProxemicLayer"}
