Changed the obstacle layer implementation.
Chnage from VoxelLayer to Obstacle layer since we do not use
3D obstacles.

--- a/Workspace/src/neobotix_mp_655/neo_2dnav/config/costmap_global.yaml
+++ b/Workspace/src/neobotix_mp_655/neo_2dnav/config/costmap_global.yaml
@@ -25,6 +25,6 @@ global_costmap:
 
   plugins:
      - {name: static_map,       type: "costmap_2d::StaticLayer"}
-     - {name: obstacles,        type: "costmap_2d::VoxelLayer"}
+     - {name: obstacles,        type: "costmap_2d::ObstacleLayer"}
      - {name: inflation_layer,  type: "costmap_2d::InflationLayer"}
      - {name: social_layer,     type: "social_navigation_layers::ProxemicLayer"}
