--- a/Workspace/src/neobotix_mp_655/neo_2dnav/config/costmap_local.yaml
+++ b/Workspace/src/neobotix_mp_655/neo_2dnav/config/costmap_local.yaml
@@ -34,6 +34,6 @@ local_costmap:
 
   plugins:
      - {name: static_map,       type: "costmap_2d::StaticLayer"}
-     - {name: obstacles,        type: "costmap_2d::VoxelLayer"}
+     - {name: obstacles,        type: "costmap_2d::ObstacleLayer"}
      - {name: inflation_layer,  type: "costmap_2d::InflationLayer"}
      - {name: social_layer,     type: "social_navigation_layers::ProxemicLayer"}
