--- a/Workspace/src/neobotix_mp_655/neo_2dnav/config/costmap_local_sim.yaml
+++ b/Workspace/src/neobotix_mp_655/neo_2dnav/config/costmap_local_sim.yaml
@@ -13,6 +13,6 @@ local_costmap:
   #inflation_layer/cost_scaling_factor: 2.5
   plugins:
      - {name: static_map,       type: "costmap_2d::StaticLayer"}
-     - {name: obstacles,        type: "costmap_2d::VoxelLayer"}
+     - {name: obstacles,        type: "costmap_2d::ObstacleLayer"}
      - {name: inflation_layer,  type: "costmap_2d::InflationLayer"}
      - {name: social_layer,     type: "social_navigation_layers::ProxemicLayer"}
