Configure the global costmap to update more often.
Increase the refresh rate for the global cost map such that
dynamic obstacled are actually dynamic.

--- a/Workspace/src/neobotix_mp_655/neo_2dnav/config/costmap_global.yaml
+++ b/Workspace/src/neobotix_mp_655/neo_2dnav/config/costmap_global.yaml
@@ -11,8 +11,8 @@ global_costmap:
                             # and robot_base_frame parameters is transform_tolerance seconds older than
                             # ros::Time::now(), then the navigation stack will stop the robot. Default: 0.2
   # Rate parameters
-  update_frequency: 0.5     # The frequency in Hz for the map to be updated. Default 5.0
-  # publish_frequency: 1.0    # The frequency in Hz for the map to be publish display information. Default: 0.0
+  update_frequency: 10     # The frequency in Hz for the map to be updated. Default 5.0
+  publish_frequency: 10    # The frequency in Hz for the map to be publish display information. Default: 0.0
 
   static_map: true
 
