--- a/Workspace/src/neobotix_mp_655/neo_2dnav/config/planner_global_base.yaml
+++ b/Workspace/src/neobotix_mp_655/neo_2dnav/config/planner_global_base.yaml
@@ -3,3 +3,4 @@ base_global_planner: global_planner/GlobalPlanner
 GlobalPlanner:
   neutral_cost: 50 # Leave default values as it might not be able to find a path
                    # through narrow corridors.
+  planner_frequency: 10
