--- a/Workspace/src/neobotix_mp_655/neo_2dnav/config/costmap_global.yaml
+++ b/Workspace/src/neobotix_mp_655/neo_2dnav/config/costmap_global.yaml
@@ -24,6 +24,7 @@ global_costmap:
                             # may find a longer and more open route.
   social_layer/covariance: 0.929 # ROB864
   social_layer/amplitude: 110.0 # ROB864
+  social_layer/cutoff: 50.0 # ROB864
 
   plugins:
      - {name: static_map,       type: "costmap_2d::StaticLayer"}
