--- a/Workspace/src/neobotix_mp_655/neo_2dnav/config/mir/costmap_local_params.yaml
+++ b/Workspace/src/neobotix_mp_655/neo_2dnav/config/mir/costmap_local_params.yaml
@@ -32,7 +32,7 @@ local_costmap:
   inflation_radius: 0.4     # Inflation of objects picked up by the laser scanners e.g. humans
 
   plugins:
-     - {name: static_map,       type: "costmap_2d::StaticLayer"}
+  #   - {name: static_map,       type: "costmap_2d::StaticLayer"}
      - {name: obstacles,        type: "costmap_2d::ObstacleLayer"}
      - {name: inflation_layer,  type: "costmap_2d::InflationLayer"}
   #   - {name: social_layer,     type: "social_navigation_layers::ProxemicLayer"}
