--- a/Workspace/src/neobotix_mp_655/neo_2dnav/config/mir/planner_local_teb_mir.yaml
+++ b/Workspace/src/neobotix_mp_655/neo_2dnav/config/mir/planner_local_teb_mir.yaml
@@ -12,7 +12,7 @@ TebLocalPlannerROS:
   max_global_plan_lookahead_dist: 3.0      # Specify maximum length (cumulative Euclidean distances) of the subset of the global plan taken into account for optimization [if 0 or negative: disabled; the length is also bounded by the local costmap size]
   force_reinit_new_goal_dist: 1.0          # Force the planner to reinitialize the trajectory if a previous goal is updated with a seperation of more than the specified value in meters (skip hot-starting)
   feasibility_check_no_poses: 5            # Specify up to which pose on the predicted plan the feasibility should be checked each sampling interval
-  global_plan_viapoint_sep: 0.4        # Min. separation between each two consecutive via-points extracted from the global plan [if negative: disabled]
+  global_plan_viapoint_sep: 0.4  #ROB864   # Min. separation between each two consecutive via-points extracted from the global plan [if negative: disabled]
   via_points_ordered: false                # If true, the planner adheres to the order of via-points in the storage container
   exact_arc_length: false                  # If true, the planner uses the exact arc length in velocity, acceleration and turning rate computations [-> increased cpu time], otherwise the euclidean approximation is used.
   publish_feedback: false                  # Publish planner feedback containing the full trajectory and a list of active obstacles (should be enabled only for evaluation or debugging purposes)
